4.8.8

CPU and Memory usage as normal sensors

4.8.7

DewPoint - virtual sensor 

4.8.6

SDM630 Fix 
On/Off refresh for charts
NVD3 Fix
BME280 Fix

4.8.5

Odświeżanie statusu co 10 sekund - jeśli była zmiana na bazie.
Linki do nettemp.tk - nowe logo
Drobne poprawki w kodzie.

4.8.4

Możliwość ustawienia kolejności modułów w statusie - Settings->Status order
Drobne poprawki w kodzie.

4.8.3

Informacja o braku odczytu z czujnika - Read err. - Device->Settings -  <a href="https://wiki.abc-service.com.pl/doku.php?id=funkcje_nettemp:dodawanie_czujnikow#konfiguracja_czujnikow" target="_blank" class="btn btn-xs btn-primary">NT WIKI </a>
Changelog w zakładce tools->update